--- a/src/android/assert/rayna-native-template/app/build.gradle
+++ b/src/android/assert/rayna-native-template/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.rayna.rayna_native"
+        applicationId "com.rayna.rayna_native_template"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile files('libs/rayna-native.jar')
 }
