--- a/src/android/assert/rayna-native-template/app/src/main/AndroidManifest.xml
+++ b/src/android/assert/rayna-native-template/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.rayna.rayna_native_template" >
 
     <application
+        android:name="com.rayna.rayna_native.RaynaApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -18,4 +19,6 @@
         </activity>
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
